# port

./: .gitignore  Cargo.toml  TODO  dependencies
src/: account.rs  error.rs  main.rs  prelude.rs
src/api/: mod.rs  task.rs  todo_api.rs  user_api.rs
src/api/account/: create.rs  login.rs  mod.rs
src/model/: todo_model.rs  user_model.rs
src/models/: mod.rs  todo_model.rs
src/models/model/: todo_model.rs
src/repository/: surrealdb_repo.rs
src/utils/: encryption.rs  macros.rs  mod.rs
surreal.db/: IDENTITY  LOG  LOG.old.1675624471356524
