[package]
name = "port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
derive_more = "0.99.17"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
surrealdb = "1.0.0-beta.8"
uuid = "1.3.0"
thiserror = "1"
futures = "0.3"