[package]
name = "port"
version = "0.1.0"
edition = "2021"
authors = ["A Garrett Gelwick <gmanenergy@gmail.com>"]
repository = "https://github.com/ChousX/port"


[dependencies]
actix-web = "4.3.0"
derive_more = "0.99.17"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
surrealdb = "1.0.0-beta.8"
uuid = "1.3.0"
thiserror = "1"
futures = "0.3"
actix-web-lab = "0.18.9"
pwbox = "0.5.0"
rand = "0.8.5"
courier = { path = "../courier"}
env_logger = "0.10.0"